2006-08-14  Wolfgang Sourdeau  <wsourdeau@inverse.ca>

	* UI/Contacts/UIxContactsListViewContainerBase.m: 
	UIxContactsListViewContainer renamed to serve as a base class for
	the contact lists in both the contact editor and the contact
	selectors.

	* SoObjects/Contacts/SOGoContactLDAPFolder.m
	([SOGoContactLDAPFolder
	-LDAPSetHostname:setPort:setBindDN:setBindPW:setContactIdentifier:
	setUserIdentifier:setRootDN:]): an LDAP field specifying the
	loginname of the users can now be specified.

	* UI/WebServerResources/generic.js: added code to manage contact
	lists through the new implementation of the UIxContactSelector.

	* UI/Templates: put the templates related to SchedulerUI in its
	own directory.

	* SoObjects/Contacts/NGLdapEntry+Contact.m ([NGLdapEntry
	-asDictionaryWithAttributeNames:withUID:andCName:cName]): add an
	entry for "uid" with the field name representing the login name of
	the user in the corresponding LDAP branch.

2006-08-10  Wolfgang Sourdeau  <wsourdeau@inverse.ca>

	* SoObjects/Contacts/SOGoContactGCSFolder.m ([SOGoContactGCSFolder
	-lookupName:_keyinContext:_ctxacquire:_flag]): when the HTTP
	request is a PUT, always create an entry, even if we're not sure
	it does exist.

2006-08-09  Wolfgang Sourdeau  <wsourdeau@inverse.ca>

	* UI/WebServerResources/ContactsUI.js: implemented live-search.

	* SoObjects/Contacts/SOGoContactFolders.m ([SOGoContactFolders
	-appendSystemSourcesInContext:context]): populated method with
	code that creates entries mapped to instances SOGoContactFolder,
	based on the configuration found in the NSUserDefaults under the
	key "SOGoLDAPAddressBooks".
	([SOGoContactFolders
	-lookupName:nameinContext:contextacquire:acquire]):
	"contactsources" do not exist anymore, SOGoContactFolder was split
	into two classes: SOGoContactGCSFolder and SOGoContactLDAPFolder
	and one protocol: SOGOContactFolder, instead.
	([SOGoContactFolders -contactFolders]): new accessor used by the