@@ -212,7 +212,7 @@
 "NOT IN OFFICE"		= "A l'exterieur";
 "MEETING"		= "Rêunion";
 "HOLIDAY"		= "Vacances";
-"PHONE CALL"		= "Rendez-vous t&eacute;l&eacute;phonique";
+"PHONE CALL"		= "Rendez-vous têlêphonique";
 
 /* validation errors */
 
